# CargoDiagramRZD

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  example.py
client/: drawing.js  index.html  script.js  style.css
nginx/: Dockerfile  nginx.conf
notebooks/: test.docx  формулы.ipynb
server/: Makefile  pyproject.toml
server/app/: __main__.py
server/app/config/: __init__.py  celery.py  default.py
server/app/db/migrator/versions/: 2023-02-06_60c08b9bae01_.py
server/app/db/repository/: base.py
server/app/endpoints/: __init__.py  calculate.py  ping.py
server/app/schemas/: __init__.py
server/app/schemas/calculate/: calculate.py  crossing.py
server/app/tasks/: __init__.py  test.py
server/app/utils/calculate/: __init__.py  centers_of_mass.py  check_delta_length.py  model.py  report.py
server/tests/: conftest.py
теоретические материалы/: Пояснение к материалу по перевозке оборудования в ящичной упаковке.docx  Технические условия размещения и крепления грузов в вагонах и контейнерах (2).docx  Фото.docx
